# OpenAssetIO

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  ADOPTERS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  GOVERNANCE.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  SANBOXED_BUILDS.md  SANDBOXED_BUILDS.md  SUPPORT.md  cmake-format.yaml  pyproject.toml  setup.cfg  setup.py
examples/manager/SimpleCppManager/: CMakeLists.txt  README.md
examples/manager/SimpleCppManager/src/: SimpleCppManager.cpp
examples/manager/SimpleCppManager/tests/: CMakeLists.txt  test_SimpleCppManager.py
resources/perftest/: CMakeLists.txt  README.md  lib.cpp  lib.hpp  perftest.cpp
src/: CMakeLists.txt  CPPLINT.cfg
src/include/openassetio/managerAPI/: ManagerInterface.hpp
src/openassetio-core/: CMakeLists.txt  LoggerInterface.cpp  TraitsData.cpp
src/openassetio-core-c/: .clang-tidy  CMakeLists.txt
src/openassetio-core-c/include/: .clang-tidy
src/openassetio-core-c/private/: CManagerInterface.cpp  CManagerInterface.hpp  InfoDictionary.cpp  StringView.hpp  errors.hpp
src/openassetio-core-c/private/handles/: Converter.hpp  InfoDictionary.hpp
src/openassetio-core-c/private/hostAPI/: Manager.cpp
src/openassetio-core-c/private/hostApi/: Manager.cpp
src/openassetio-core-c/private/managerAPI/: CManagerInterface.cpp  CManagerInterface.hpp  CManagerInterfaceAdapter.cpp  CManagerInterfaceAdapter.hpp
src/openassetio-core-c/private/managerApi/: CManagerInterfaceAdapter.cpp  CManagerInterfaceAdapter.hpp
src/openassetio-core-c/src/: InfoDictionary.cpp  StringView.hpp  errors.hpp
src/openassetio-core-c/src/handles/: Converter.hpp
src/openassetio-core-c/src/hostApi/: Manager.cpp
src/openassetio-core-c/src/managerApi/: CManagerInterfaceAdapter.cpp  CManagerInterfaceAdapter.hpp
src/openassetio-core-c/tests/: .clang-tidy  CMakeLists.txt  InfoDictionaryTest.cpp  StringViewReporting.hpp  StringViewTest.cpp  errorsTest.cpp  handlesTest.cpp  main.cpp
src/openassetio-core-c/tests/hostApi/: ManagerTest.cpp
src/openassetio-core-c/tests/managerApi/: CManagerInterfaceAdapterTest.cpp  MockManagerInterfaceSuite.hpp
src/openassetio-core/hostAPI/: HostInterface.cpp  Manager.cpp
src/openassetio-core/hostApi/: HostInterface.cpp  Manager.cpp  ManagerFactory.cpp  ManagerImplementationFactoryInterface.cpp  ManagerInterfaceFactoryInterface.cpp
src/openassetio-core/log/: ConsoleLogger.cpp  LoggerInterface.cpp  SeverityFilter.cpp
src/openassetio-core/managerAPI/: Host.cpp  HostSession.cpp  ManagerInterface.cpp
src/openassetio-core/managerApi/: Host.cpp  HostSession.cpp  ManagerInterface.cpp
src/openassetio-core/specification/: Specification.cpp
src/openassetio-core/src/: BatchElementError.cpp  Context.cpp  TraitsData.cpp
src/openassetio-core/src/utils/: Regex.cpp  (+6 more)
src/openassetio-core/tests/: .clang-tidy  BatchElementErrorTest.cpp  CMakeLists.txt  ContextTest.cpp  EntityReferenceTest.cpp  TraitsDataTest.cpp  deprecationsTest.cpp  main.cpp  typedefsTest.cpp  versionTest.cpp
src/openassetio-core/trait/: BlobTrait.cpp
src/openassetio-python/: CMakeLists.txt  ContextBinding.cpp  LoggerInterfaceBinding.cpp  TraitsDataBinding.cpp  _openassetio.cpp  _openassetio.hpp  pyproject.toml  requirements.txt  setup.py
src/openassetio-python/bridge/: CMakeLists.txt
src/openassetio-python/cmodule/: CMakeLists.txt
src/openassetio-python/hostAPI/: HostInterfaceBinding.cpp  ManagerBinding.cpp
src/openassetio-python/hostApi/: HostInterfaceBinding.cpp  ManagerBinding.cpp  ManagerFactoryBinding.cpp  ManagerInterfaceFactoryInterfaceBinding.cpp
src/openassetio-python/managerAPI/: HostBinding.cpp  HostSessionBinding.cpp  ManagerInterfaceBinding.cpp  ManagerStateBaseBinding.cpp
src/openassetio-python/managerApi/: HostBinding.cpp  HostSessionBinding.cpp  ManagerInterfaceBinding.cpp  ManagerStateBaseBinding.cpp
src/openassetio-python/module/: BatchElementErrorBinding.cpp  CMakeLists.txt  EntityReferenceBinding.cpp  LoggerInterfaceBinding.cpp  PyRetainingSharedPtr.hpp  _openassetio.cpp  _openassetio.hpp
src/openassetio-python/package/: setup.py
src/openassetio-python/specification/: SpecificationBinding.cpp
src/openassetio-python/tests/: CMakeLists.txt  conftest.py  requirements.txt  test_cmake.py
src/openassetio-python/trait/: BlobTraitBinding.cpp
src/openassetio-ui/: CMakeLists.txt
src/openassetio-ui/tests/: .clang-tidy  CMakeLists.txt  UIDelegateRequestStateTest.cpp  main.cpp
tests/: CMakeLists.txt  README.md  conftest.py  requirements.txt
tests/openassetio/: test_imports.py  test_log.py  test_logging.py  test_specification.py  test_traits.py
tests/openassetio-core/: BatchElementErrorTest.cpp  CMakeLists.txt  TraitsDataTest.cpp  main.cpp
tests/openassetio-core-c/: CMakeLists.txt
tests/openassetio-core-c/private/: InfoDictionaryTest.cpp  StringViewReporting.hpp  StringViewTest.cpp  errorsTest.cpp  handlesTest.cpp
tests/openassetio-core/hostApi/: ManagerTest.cpp
tests/openassetio-core/managerAPI/: ManagerStateBaseTest.cpp
tests/openassetio-core/managerApi/: HostSessionTest.cpp  HostTest.cpp  ManagerStateBaseTest.cpp
tests/openassetio-core/trait/: TraitBaseTest.cpp
tests/openassetio-python/: CMakeLists.txt  PyRetainingSharedPtrTest.cpp  _openassetio_test.cpp  hostApiTest.cpp
tests/openassetio/_core/: test_audit.py
tests/openassetio/hostAPI/: test_localization.py  test_logging.py  test_manager.py  test_session.py  test_terminology.py  test_transactions.py
tests/openassetio/managerAPI/: test_host.py  test_hostsession.py  test_managerinterface.py
tests/openassetio/pluginSystem/: test_pluginsystem.py  test_pluginsystemmanagerfactory.py
tests/python/: conftest.py
tests/python/openassetio/: test_batchelementerror.py  test_context.py  test_entityreference.py  test_imports.py  test_log.py  test_specification.py  test_specificationbase.py  test_trait.py  test_traits.py  test_traitsdata.py
tests/python/openassetio_test/: test_PyRetainingSharedPtr.py  test_hostApi.py
(+2119 files in other folders)
