[build-system]
requires = [
    "setuptools",
    "cmake==3.21",
    "ninja"
]
build-backend = "setuptools.build_meta"


[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-few-public-methods",
    # Disable Python 3 improvements:
    # - We've not definitely ruled 2 out
    # - Much of this code will move to C++
    "useless-object-inheritance",
    "super-with-arguments",
    "consider-using-f-string"
]

# NB: This requires the use of pyproject-flake8
[tool.flake8]
max-line-length = 99
extend-ignore = "E266,"

[tool.pylint.format]
max-line-length = 99

[tool.pylint.basic]
#module-naming-style = "camelCase"
argument-naming-style = "camelCase"
#attr-naming-style = "camelCase"
#function-naming-style = "camelCase"
#method-naming-style = "camelCase"
#const-naming-style = "camelCase"
class-const-naming-style = "camelCase"
variable-naming-style = "camelCase"

# Support both camelCase and PascalCase for modules
module-rgx = "_?([a-z]|[A-Z])+([A-Z][a-z0-9]*)*"
# camelCase doesn't include "__camelCase" or "test_camelCase"
attr-rgx = "_?_?[a-z0-9]+([A-Z][a-z0-9]*)*"
method-rgx = "(_?_|test_)?[a-z0-9]+([A-Z][a-z0-9]*)*"
function-rgx = "(_|test_)?[a-z0-9]+([A-Z][a-z0-9]*)*"
# C++ style constants, e.g. `kThing_SubThing`.
const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"
class-const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = true

[tool.black]
line-length = 99
target-version = ["py39"]
